fixed formatting bugs